tests/algorithms/x/Java/data_structures/binary_tree/diff_views_of_binary_tree.error
compile: exit status 1
/tmp/TestJavaTranspiler_Algorithms_Golden178_diff_views_of_binary_tree126800932/001/Main.java:36: error: incompatible types: int cannot be converted to BigInteger
        return new Tree(new java.math.BigInteger[]{java.math.BigInteger.valueOf(3), java.math.BigInteger.valueOf(9), java.math.BigInteger.valueOf(20), java.math.BigInteger.valueOf(15), java.math.BigInteger.valueOf(7)}, new java.math.BigInteger[]{java.math.BigInteger.valueOf(1), new java.math.BigInteger(String.valueOf(NIL)), java.math.BigInteger.valueOf(3), new java.math.BigInteger(String.valueOf(NIL)), new java.math.BigInteger(String.valueOf(NIL))}, new java.math.BigInteger[]{java.math.BigInteger.valueOf(2), new java.math.BigInteger(String.valueOf(NIL)), java.math.BigInteger.valueOf(4), new java.math.BigInteger(String.valueOf(NIL)), new java.math.BigInteger(String.valueOf(NIL))}, 0);
                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                 ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
1 error
